less/explore/appmaker.less
/*********************************************************
* Appmaker
*/

#appmaker {
  section {
    padding: 40px 0;
  }

  section:first-child {
    padding-top: 0;
    #front-phone-container {
      position: absolute;
      top: 0;
      width: 100%;
      height: auto;
      z-index: 10;

      img {
        display: block;
        margin: 0 auto;
      }
    }
  }

  section#starter-apps {
    position: relative;
    background-color: rgb(227, 236, 241);
    padding-bottom: 100px;

    .thumbnail-wrapper {
      background-size: contain;
      background-repeat: no-repeat;
      background-position: 50%;
      height: 480px;
    }

    .thumbnail-wrapper, .caption {
      width: 320px;
    }
  }

  #appmaker-carousel {
    background-color: white;

    .carousel-control {
      display: none;
    }

    .carousel-indicators {
      bottom: 16%;
    }
  }

  #app-audience {
    padding: 0 20px;
    font-weight: bold;
    border-bottom: 2px solid #000;
    display: inline-block;

    min-width: 6em;

    -webkit-transition: color .5s;
    transition: color .5s;

    &[data-show="true"] {
      color: black;
    }

    &[data-show="false"] {
      color: transparent;
    }
  }

  #sub-heading {
    font-size: 1.4em;
    font-style: italic;
  }
}

#gallery-actions {
  position: absolute;
  right: 55px;
  bottom: 0;
  width: 350px;

  a {
    cursor: pointer;
    background: @green;
    color: #FFF;
    border: none;
    display: inline-block;
    font-size: 16px;
    height: 50px;
    line-height: 50px;
    font-weight: 200;
    margin-right: 5px;
    text-align: center;
    width: 150px;

    &:hover {
      background: lighten(@green, 10%);
      text-decoration: none;
    }
  }

  .addMore {
    height: 56px;
    line-height: 50px;
  }
}

